# roadmap-backend-dev

./: .gitignore  README.md
dependencies/: pyproject.toml
dependencies/doc/: Dependencies.md
dependencies/src/dependencies/: main.py  repos.py
dependencies/src/dependencies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logging/doc/: Logging.md
logging/src/logging/: csvparser.py  logger.py  main.py
